# SimpleJabber

./: .gitignore  .gitmodules  .travis.yml  CMakeDefinitions.cmake  CMakeLists.txt  README.md  main.cpp
base/: CMakeLists.txt  connection_state.cpp  connection_state.h  connection_types.cpp  connection_types.h  project_info.cpp  project_info.h  status.cpp  status.h  user_types.cpp  user_types.h  version.cpp  version.h
core/: CMakeLists.txt  client.cpp  client.h  logger.cpp  logger.h  settings.cpp  settings.h  settings_secure.h  settings_types.h
ui/: CMakeLists.txt  chat_list_widget.cpp  chat_list_widget.h  chat_list_widget.ui  chat_widget.cpp  chat_widget.h  chat_widget.ui  connection_state_widget.cpp  connection_state_widget.h  connection_state_widget.ui  dialog_page_widget.cpp  dialog_page_widget.h  dialog_page_widget.ui  dockwidget.cpp  dockwidget.h  dockwidget.ui  header_widget.cpp  header_widget.h  header_widget.ui  login_page_widget.cpp  login_page_widget.h  login_page_widget.ui  login_widget.cpp  login_widget.h  login_widget.ui  loginwidget.cpp  loginwidget.h  main.cpp  main_window.cpp  main_window.h  main_window.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  settings_page_widget.cpp  settings_page_widget.h  settings_page_widget.ui  settings_widget.cpp  settings_widget.h  settings_widget.ui  (+9 more)
ui/dialog/: dialog_list_widget.cpp  dialog_list_widget.h  dialog_list_widget.ui  dialog_widget.cpp  dialog_widget.h  dialog_widget.ui  header_widget.cpp  header_widget.h
